--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -11,10 +11,8 @@
         <script src="https://player.vimeo.com/api/player.js"></script>
     </head>
     <body>
-        
-
         <nav>
-            <ul class="nav-bar">
+            <ul class="nav-bar" id="list-container">
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
                 </li>
@@ -31,8 +29,33 @@
                     <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
                 </li>
             </ul>
+            <ul class="nav-bar" id="button-container">
+                    <li class="nav-bar-list-item">
+                        <canvas id="myCanvas" class="hamburger-button">
+                        </canvas>
+                    </li>
+                <li class="nav-bar-list-item">
+                    <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
+                </li>
+            </ul>
         </nav>
-
+        <div class="nav-bar-drop-down" id="nav-bar-drop-down" hidden>
+            <a class="nav-bar-drop-down-menu-item nav-bar-drop-down-menu-item-active" href="Max_Intro.html">Max Intro</a>
+            <a class="nav-bar-drop-down-menu-item" href="Chordophone.html">Chordophone</a>
+            <a class="nav-bar-drop-down-menu-item" href="DiatonicPads.html">DiatonicPads</a>
+            <a class="nav-bar-drop-down-menu-item" href="LiveClip.html">LiveClip</a>
+        </div>
+        <script>
+            var listContainer = document.getElementById("list-container");
+            var buttonContainer = document.getElementById("button-container");
+            if(window.screen.availWidth < 600){
+                console.log("show button container")
+                listContainer.hidden = "true";
+            } else {
+                console.log("show list container")
+                buttonContainer.hidden="true";
+            }
+        </script>
         
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white bread-crumb-font-size">
@@ -83,4 +106,5 @@
             </div>
         </div>
     </body>
+    <script src="resize.js"></script>
 </html>
