--- a/Max_Intro_Test.html
+++ b/Max_Intro_Test.html
@@ -39,6 +39,12 @@
                 </li>
             </ul>
         </nav>
+        <div class="nav-bar-drop-down" id="nav-bar-drop-down" hidden>
+            <a class="nav-bar-drop-down-menu-item nav-bar-drop-down-menu-item-active" href="Max_Intro.html">Max Intro</a>
+            <a class="nav-bar-drop-down-menu-item" href="Chordophone.html">Chordophone</a>
+            <a class="nav-bar-drop-down-menu-item" href="DiatonicPads.html">DiatonicPads</a>
+            <a class="nav-bar-drop-down-menu-item" href="LiveClip.html">LiveClip</a>
+        </div>
         <script>
             var listContainer = document.getElementById("list-container");
             var buttonContainer = document.getElementById("button-container");
@@ -100,4 +106,5 @@
             </div>
         </div>
     </body>
+    <script src="resize.js"></script>
 </html>
